[CAN-112] Bug: Mobile Card Gap Fix Problem - Removed previous global html,body - reintroduced this body Solution - Add 100% height but only for body - Removes hiding scroll bar Note

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,10 @@ html, body {
   overscroll-behavior-y: contain;
 }
 
+body {
+  height: 100%;
+}
+
 .dynamic-height {
   height: calc(100% - var(--navbar-height));
 }
